--- a/IDE/frontend-dev/scss/_accordion-menu.scss
+++ b/IDE/frontend-dev/scss/_accordion-menu.scss
@@ -1,8 +1,8 @@
 button.accordion {
-  background-color: $grey-light;
+  background-color: var(--grey-light-to-dark-accordion-color); // $grey-light;
   border: none;
-  border-bottom: 2px solid #fff;
-  color: rgba(0, 0, 0, 0.6);
+  border-bottom: 2px solid var(--white-to-dark-bg-color); // #fff;
+  color: var(--accordion-font-color); //rgba(0, 0, 0, 0.6);
   cursor: pointer;
   font-family: poppins_regular;
   font-size: 16px;
@@ -13,23 +13,23 @@ button.accordion {
   transition: 0.25s ease-in-out;
   width: 100%;
   &:hover {
-    background: $grey-mid;
+    background: var(--grey-mid-to-dark-hov-accordion-color); // $grey-mid;
     border-bottom: 2px solid $teal-main;
   }
   &.active {
-    background-color: $grey-light;
+    background-color: var(--grey-light-to-dark-accordion-color); // $grey-light;
     border-bottom: 2px solid $teal-main;
-    color: $grey-dark;
+    color: var(--accordion-highlight-font-color); // $grey-dark;
     padding: 8px 14px;
     &:hover {
-      color: $grey-dark;
+      color: var(--accordion-highlight-font-color); // $grey-dark;
     }
     &:after {
       content: "\2796"; /* Unicode character for "minus" sign (-) */
     }
   }
   &:after {
-    color: rgba(0, 0, 0, 0.6);
+    color: var(--accordion-font-color); //rgba(0, 0, 0, 0.6);
     content: '\02795'; /* Unicode character for "plus" sign (+) */
     float: right;
     font-size: 14px;
@@ -39,12 +39,12 @@ button.accordion {
 
 button.accordion-sub {
   background: transparent;
-  border-bottom: 1px solid $grey-toolbar;
+  border-bottom: 1px solid var(--grey-to-dark-toolbar-color); // $grey-toolbar
   border-top: 0;
   border-left: 0;
   border-right: 0;
   border-radius: 0;
-  color: $grey-dark;
+  color: var(--accordion-highlight-font-color); // $grey-dark;
   font-size: 1em;
   font-family: 'poppins_regular';
   padding: .4em .8em .25em;
@@ -52,16 +52,16 @@ button.accordion-sub {
   width: 100%;
   &:hover {
     background: rgba($grey-toolbar,0.2);
-    color: $grey-dark;
+    color: var(--accordion-highlight-font-color); // $grey-dark;
   }
   &.active {
     background: transparent;
     border-bottom: 2px solid $teal-01;
-    color: $grey-dark;
+    color: var(--accordion-highlight-font-color); // $grey-dark;
     padding-bottom: .2em;
     margin-top: .2em;
     &:hover {
-      color: $grey-dark;
+      color: var(--accordion-highlight-font-color); // $grey-dark;
     }
     &:after {
       content: "\2796"; /* Unicode character for "minus" sign (-) */
@@ -85,6 +85,7 @@ button.accordion-sub {
   opacity: 0;
   overflow: hidden;
   transition: 0.2s ease;
+  color: var(--black-to-light-text-color); 
   &.show {
     max-height: 100000px; /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
     opacity: 1;
@@ -99,6 +100,7 @@ button.accordion-sub {
 }
 
 .panel.show {
+  color: var(--black-to-light-text-color);
   max-height: 100000px; /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
   opacity: 1;
 }
