--- a/IDE/frontend-dev/scss/_editor.scss
+++ b/IDE/frontend-dev/scss/_editor.scss
@@ -1,5 +1,5 @@
 #editor {
-  background: #fff;
+  background: var(--white-to-dark-bg-color);
   display: none;
   float: left;
   height: calc(100% - 70px);
@@ -9,7 +9,7 @@
   position: absolute;
   top: 28px;
   // ace.js does not provide an API to always hide the vertical scrollbar,
-  // so we cover it with the sidebar here and below.
+  // so we cover it with the sidebar here and below. 
   width: calc(100vw - 38px); // make it (100vw - 50px) to show the scrollbar
   z-index: 97;
   &.active {
