--- a/IDE/frontend-dev/scss/_upper.scss
+++ b/IDE/frontend-dev/scss/_upper.scss
@@ -30,7 +30,7 @@
   }
   .current {
     font-family: poppins_regular;
-    color: rgba(0, 0, 0, 0.7);
+    color: var(--accordion-font-color); // rgba(0, 0, 0, 0.7);
     padding-right: 20px;
     font-size: 12px;
   }
