--- a/IDE/frontend-dev/scss/_popup.scss
+++ b/IDE/frontend-dev/scss/_popup.scss
@@ -12,7 +12,7 @@
 }
 
 #popup {
-  background: white;
+  background: var(--white-to-dark-toolbar-color);
   border: 1px solid $grey-mid;
 	display: none;
 	left: calc((100% / 2) - 300px);
