--- a/IDE/frontend-dev/scss/_library-list.scss
+++ b/IDE/frontend-dev/scss/_library-list.scss
@@ -68,7 +68,7 @@ ul {
     }
     .libraries-list {
       li {
-        color: var(--accordion-highlight-font-color);//rgba(0, 0, 0, 0.8);
+        color: var(--accordion-highlight-font-color);
         cursor: pointer;
         font-family: inconsolata;
       	font-size: 14px;
