--- a/IDE/frontend-dev/scss/_toolbar.scss
+++ b/IDE/frontend-dev/scss/_toolbar.scss
@@ -17,7 +17,7 @@
 
 
 .toolbar {
-  background: var(--grey-to-dark-toolbar-color); //$grey-toolbar;
+  background: var(--grey-to-dark-toolbar-color);
   bottom: 0;
   box-shadow: 5px 5px #eee;
   display: block;
