--- a/IDE/frontend-dev/scss/_file-list.scss
+++ b/IDE/frontend-dev/scss/_file-list.scss
@@ -24,6 +24,14 @@
       padding: 2px 0;
       text-indent: 22px;
     }
+    .source-text {
+      width: calc(100% - 77px); // 77  being button file- rename right(36) + its width(17) + text-indent(22) + extra padding (2)
+      display: inline-block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      text-indent: 0;
+    }
     .source-file {
       position: relative;
       &:hover {
@@ -36,15 +44,23 @@
         top: 5px;
       }
     }
-    .source-text {
-      position: relative;
-    }
     &.is-dir {
       >.sub-file-list{
-          padding-left: 12px;
+        padding-left: 12px;
+        >li>ul {
+          padding-left: 13px;
+          padding-bottom: 0;
+        }
         >.source-file {
           &:hover {
             background-color: inherit;
+          }
+          .source-text {
+            text-indent: 12px;
+            padding:0;
+          }
+          .source-text {
+            width: calc(100% - 55px); // 55  being button file- rename right(36) + its width(17) + extra padding (2)
           }
           > .source-text {
             text-indent: 0px;
@@ -59,7 +75,7 @@
       }
       .source-file {
         position: relative;
-        text-indent: 12px;
+        text-indent: 0px;
         padding-left: 0;
         &:hover {
           background: rgba(255, 255, 0, 0.2);
