--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -859,6 +859,9 @@ ul.projectManager {
     text-overflow: ellipsis;
     white-space: nowrap;
     text-indent: 0; }
+    .file-list .section .source-text:hover {
+      white-space: normal;
+      word-break: break-all; }
   .file-list .section .source-file {
     position: relative; }
     .file-list .section .source-file:hover {
