--- a/IDE/frontend-dev/scss/base.scss
+++ b/IDE/frontend-dev/scss/base.scss
@@ -114,6 +114,33 @@ body {
   }
 }
 
+[data-drag-svg] {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1000;
+  width: 100vw;
+  height: 100vh;
+  &.active-drag-upload {
+    z-index: 1000;
+  }
+  polygon {
+    opacity: 0.3;
+    &.active-drag-upload {
+      opacity: 0.6;
+    }
+  }
+  [data-drag-func=main] {
+    fill: rgb(0, 255, 122);
+  }
+  [data-drag-func=folder] {
+    fill: rgb(0, 255, 0);
+  }
+  &.no>polygon {
+    fill: rgb(255, 0, 0);
+  }
+}
+
 ul {
 	font-family: inconsolata;
 }
