--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -120,6 +120,27 @@ body.uploading {
     opacity: 0.75 !important;
     cursor: auto !important; }
 
+[data-drag-svg] {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1000;
+  width: 100vw;
+  height: 100vh; }
+  [data-drag-svg].active-drag-upload {
+    z-index: 1000; }
+  [data-drag-svg] polygon {
+    opacity: 0.3; }
+    [data-drag-svg] polygon.active-drag-upload {
+      opacity: 0.6;
+      z-index: 1000; }
+  [data-drag-svg] [data-drag-func=main] {
+    fill: #00ff7a; }
+  [data-drag-svg] [data-drag-func=folder] {
+    fill: lime; }
+  [data-drag-svg].no > polygon {
+    fill: red; }
+
 ul {
   font-family: inconsolata; }
 
@@ -1295,17 +1316,6 @@ ul dl {
   width: 100vw;
   z-index: 9998;
   background: rgba(0, 0, 0, 0.3); }
-
-#overlay.active-drag-upload {
-  height: 100vh;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100vw;
-  z-index: 9998;
-  background: rgba(0, 255, 122, 0.3); }
-  #overlay.active-drag-upload.no {
-    background: rgba(255, 0, 0, 0.3); }
 
 ::-webkit-scrollbar {
   width: 12px; }
