--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -132,8 +132,7 @@ body.uploading {
   [data-drag-svg] polygon {
     opacity: 0.3; }
     [data-drag-svg] polygon.active-drag-upload {
-      opacity: 0.6;
-      z-index: 1000; }
+      opacity: 0.6; }
   [data-drag-svg] [data-drag-func=main] {
     fill: #00ff7a; }
   [data-drag-svg] [data-drag-func=folder] {
