IDE: popup can now take an 'error' parameter which sets the overlay color

--- a/IDE/frontend-dev/scss/_popup.scss
+++ b/IDE/frontend-dev/scss/_popup.scss
@@ -165,5 +165,8 @@
   &.active-popup{
     @include active();
     background: rgba(0, 0, 0, 0.3);
+    &.no {
+      background: rgba(255, 0, 0, 0.3);
+    }
   }
 }
