--- a/IDE/frontend-dev/scss/base.scss
+++ b/IDE/frontend-dev/scss/base.scss
@@ -124,6 +124,9 @@ body {
   &.active-drag-upload {
     z-index: 1000;
   }
+  &.no {
+      background: rgba(255, 0, 0, 0.7);
+  }
   polygon {
     opacity: 0.3;
     &.active-drag-upload {
