--- a/IDE/frontend-dev/scss/_dropdown.scss
+++ b/IDE/frontend-dev/scss/_dropdown.scss
@@ -1,7 +1,29 @@
-/* Dropdown Button */
+// color-themed dropdown button elements
+@include themify($themes) {
+  button.dropbtn {
+    background-color: themed('selected-tab-color');
+  }
+  .dropdown-content {
+    background-color: themed('hovered-accordion-color-two');
+    select {
+      option {
+        color: themed('main-font-color');
+      }
+    }
+    ul {
+      > li, span, a {
+        color: themed('main-font-color');
+        &:hover {
+          background-color: themed('cursor-color');
+          color: themed('main-font-color-accent');
+        }
+      }
+    }
+  }
+}
 
+/* Dropdown Button */
 button.dropbtn {
-  background-color: #fff;
   border: 1px solid $teal-main;
   color: $teal-main;
   cursor: pointer;
@@ -75,7 +97,6 @@ select.dropdown-num {
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
-  background-color: #f9f9f9;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   display: none;
   min-width: 160px;
@@ -92,7 +113,6 @@ select.dropdown-num {
     padding-top: 0;
     width: 200px;
     option {
-      color: black;
       cursor: pointer;
       display: block;
       font-family: poppins_regular;
@@ -123,7 +143,6 @@ select.dropdown-num {
       user-select: none;
     }
     > li, span, a {
-      color: black;
       cursor: pointer;
       display: block;
       font-family: poppins_regular;
@@ -131,10 +150,6 @@ select.dropdown-num {
       opacity: 1;
       padding: 8px 16px;
       text-decoration: none;
-      &:hover {
-        background-color: $grey-light;
-        color: rgba(0, 0, 0, 0.9);
-      }
     }
   }
   &.show {
