--- a/IDE/frontend-dev/scss/_popup.scss
+++ b/IDE/frontend-dev/scss/_popup.scss
@@ -1,3 +1,15 @@
+// color-themed popup elements
+@include themify($themes) {
+  #popup {
+    background: themed('selected-tab-color');
+  }
+  button {
+    &.cancel {
+      background: themed('selected-tab-color');
+    }
+  }
+}
+
 #popup-nointeraction {
   display: none;
   height: 100vh;
@@ -134,7 +146,6 @@
       }
     }
     &.cancel {
-      background: $white;
       border: 1px solid $grey-mid;
       &:hover {
         background: $grey-light-mid;
